--- a/myRestful.html
+++ b/myRestful.html
@@ -9,8 +9,13 @@
 
     <div class="syncButton"></div>
     <div class="checkList"></div>
-
+    <div class="graph"></div>
+    
     <script type="text/javascript"> src="script.js"></script>
+
+    <h2>Graph of Sleep Hours History</h2>
+
+    <h3>Metal Health</h3
 
   </body>
 
