--- a/myRestful.html
+++ b/myRestful.html
@@ -10,6 +10,8 @@
     <div class="syncButton"></div>
     <div class="checkList"></div>
     <div class="graph"></div>
+    <div class="signUpButton"></div>
+    <div class="logInButton"></div>
     
     <script type="text/javascript"> src="script.js"></script>
 
@@ -20,3 +22,4 @@
   </body>
 
 </html>
+
