--- a/myRestful.html
+++ b/myRestful.html
@@ -5,7 +5,10 @@
   </head>
 
   <body>
+    <div class="header">
     <h1>My Restful</h1>
+    <p>A small step towards a healthy life.</p>
+  </div>
 
     <div class="syncButton"></div>
     <div class="checkList"></div>
