--- a/myRestful.html
+++ b/myRestful.html
@@ -9,6 +9,12 @@
     <h1>My Restful</h1>
     <p>A small step towards a healthy life.</p>
   </div>
+    
+    <div class="navbar">
+  <a href="https://google.ca">My Sleep History</a>
+  <a href="#">About myRestful</a>
+  <a href="#" class="right">My Account</a>
+</div>
 
     <div class="syncButton"></div>
     <div class="checkList"></div>
