--- a/myRestful.html
+++ b/myRestful.html
@@ -9,7 +9,7 @@
     <h1>My Restful</h1>
     <p>A small step towards a healthy life.</p>
   </div>
-    
+
     <div class="navbar">
   <a href="https://google.ca">My Sleep History</a>
   <a href="#">About myRestful</a>
@@ -21,14 +21,16 @@
     <div class="graph"></div>
     <div class="signUpButton"></div>
     <div class="logInButton"></div>
-    
+
     <script type="text/javascript"> src="script.js"></script>
 
     <h2>Graph of Sleep Hours History</h2>
 
-    <h3>Mental Health</h3
+    <h3>Mental Health</h3>
+
+    <label><input type="checkbox" name="checkbox" value="value">Yawning</label>
+
 
   </body>
 
 </html>
-
