--- a/myRestful.html
+++ b/myRestful.html
@@ -28,7 +28,19 @@
 
     <h3>Mental Health</h3>
 
+    <h4> Symptons of Sleep Deprivation </h4>
     <label><input type="checkbox" name="checkbox" value="value">Yawning</label>
+    <label><input type="checkbox" name="checkbox" value="value">Moodiness</label>
+    <label><input type="checkbox" name="checkbox" value="value">Fatigue</label>
+    <label><input type="checkbox" name="checkbox" value="value">Irritability</label>
+    <label><input type="checkbox" name="checkbox" value="value">Depressed Mood</label>
+    <label><input type="checkbox" name="checkbox" value="value">Difficulty learning new concepts</label>
+    <label><input type="checkbox" name="checkbox" value="value">Forgetfulness</label>
+    <label><input type="checkbox" name="checkbox" value="value">Inability to concentrate</label>
+    <label><input type="checkbox" name="checkbox" value="value">Clumsiness</label>
+    <label><input type="checkbox" name="checkbox" value="value">Increased appetite and carbohydrate cravings</label>
+    <label><input type="checkbox" name="checkbox" value="value">Reduced sex drive</label>
+    
 
 
   </body>
