--- a/myRestful.html
+++ b/myRestful.html
@@ -13,7 +13,7 @@
     <div class="navbar">
   <a href="https://google.ca">My Sleep History</a>
   <a href="#">About myRestful</a>
-  <a href="#" class="right">My Account</a>
+  <button onclick="myAccount()">My Account</button>
 </div>
 
     <div class="syncButton"></div>
@@ -23,6 +23,17 @@
     <div class="logInButton"></div>
 
     <script type="text/javascript"> src="script.js"></script>
+    
+    function myAccount() {
+        var txt;
+        var person = prompt("Sign in", "Username");
+        if (person == null || person == "") {
+          txt = "User cancelled the prompt.";
+        } else {
+          txt = "Hello " + person + "! How are you today?";
+        }
+        document.getElementById("demo").innerHTML = txt;
+      }
 
     <h2>Graph of Sleep Hours History</h2>
 
