--- a/myRestful.html
+++ b/myRestful.html
@@ -61,13 +61,12 @@
     <label><input type="checkbox" name="checkbox" value="value">Reduced sex drive</label>
     <br>
 
-    <div class="syncButton"></div>
+    <div class="syncButton">Sync</div>
     <div class="checkList"></div>
     <div class="graph"></div>
-    <div class="signUpButton"></div>
+    <div class="submitButton">Submit</div>
     <div class="logInButton"></div>
 
   </body>
 
 </html>
-
