--- a/myRestful.html
+++ b/myRestful.html
@@ -65,10 +65,10 @@
     <br>
     <label><input type="checkbox" name="checkbox" value="value">Reduced sex drive</label>
 
-    <div class="syncButton"></div>
+    <div class="syncButton">Sync</div>
     <div class="checkList"></div>
     <div class="graph"></div>
-    <div class="signUpButton"></div>
+    <div class="submitButton">Submit</div>
     <div class="logInButton"></div>
 
 
