--- a/myRestfulOriginalScreen.html
+++ b/myRestfulOriginalScreen.html
@@ -35,9 +35,9 @@
       <div class="main">
         <h2 style="color:white;">Your Sleep History</h2>
         <div class="fakeimg" style="height:150px;">Image</div>
-        <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+        <p> Log in to see your sleep history and points </p>
         <br>
-        <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+        <p> Not already a member? Join now to earn points just by sleeping! </p>
       </div>
     </div>
 
