--- a/myRestfulOriginalScreen.html
+++ b/myRestfulOriginalScreen.html
@@ -19,7 +19,14 @@
       <form action="/action_page.php">
         <input type="text" placeholder="Username" name="username">
         <input type="text" placeholder="Password" name="psw">
-        <button type="submit">Login</button>
+        <a href="file:///C:/Users/zhang/Documents/ellehacks/myRestful.html">Login</a>
+        <!-- <button onclick="submit()">Login</button> -->
+        <!-- type="submit">Login</button> -->
+        <!-- <script> -->
+        <!-- function myFunction() { -->
+          <!-- location.replace("file:///C:/Users/zhang/Documents/ellehacks/myRestful.html") -->
+        <!-- } -->
+        <!-- </script> -->
       </form>
     </div>
   </div>
@@ -41,7 +48,7 @@
       </div>
     </div>
 
-    
+
     <div class="syncButton"></div>
     <div class="checkList"></div>
     <div class="graph"></div>
