--- a/myRestful.html
+++ b/myRestful.html
@@ -19,7 +19,7 @@
       <form action="/action_page.php">
         <input type="text" placeholder="Username" name="username">
         <input type="text" placeholder="Password" name="psw">
-        <button type="submit">Login</button>
+        <a href="file:///C:/Users/julie/OneDrive/Documents/Elle%20Hacks%202019%20Project/myRestfulOriginalScreen.html">Login</a>
       </form>
     </div>
   </div>
