--- a/myRestful.html
+++ b/myRestful.html
@@ -7,7 +7,8 @@
 
   <body>
     <div class="header">
-    <h1>myRestful</h1>
+    <img src="" border="0px" alt="moon"
+       style="width:150px;height:150px;"/>
     <p>A small step towards a healthy life.</p>
   </div>
 
