--- a/myRestfulOriginalScreen.html
+++ b/myRestfulOriginalScreen.html
@@ -7,7 +7,7 @@
 
   <body>
     <div class="header">
-    <img src="" border="0px" alt="moon"
+    <img src="logo.png" border="0px" alt="logo"
        style="width:150px;height:150px;"/>
     <p>A small step towards a healthy life.</p>
   </div>
