--- a/myRestful.html
+++ b/myRestful.html
@@ -7,8 +7,7 @@
 
   <body>
     <div class="header">
-    <img src="logo.png" border="0px" alt="logo"
-       style="width:150px;height:150px;"/>
+    <h1>myRestful</h1>
     <p>A small step towards a healthy life.</p>
   </div>
 
@@ -76,3 +75,4 @@
   </body>
 
 </html>
+
