--- a/myRestfulOriginalScreen.html
+++ b/myRestfulOriginalScreen.html
@@ -8,7 +8,7 @@
   <body>
     <div class="header">
     <img src="logo.png" border="0px" alt="logo"
-       style="width:170px;height:150px;"/>
+         style="width:170px; height:150px;"/>
     <p>A small step towards a healthy life.</p>
   </div>
 
@@ -16,12 +16,11 @@
     <a class="active" href="my_restful.html">Home</a>
     <a href="https://google.ca">About myRestful</a>
     <a href="#contact">Contact Information</a>
+    <a class="right"> Welcome, Judges</a>
     <div class="login-container">
       <form action="/action_page.php">
-        <input type="text" placeholder="Username" name="username">
-        <input type="text" placeholder="Password" name="psw">
-        <a href="file:///C:/Users/zhang/Documents/ellehacks/myRestful.html">Login</a>
-       
+
+        <a href="file:///C:/Users/julie/OneDrive/Documents/Elle%20Hacks%202019%20Project/myRestful.html">Logout</a>
       </form>
     </div>
   </div>
@@ -43,6 +42,29 @@
       </div>
     </div>
 
+    <h2> Symptons of Sleep Deprivation </h2>
+    <p>Check off those that apply to you.</p>
+    <label><input type="checkbox" name="checkbox" value="value">Yawning</label>
+    <br>
+    <label><input type="checkbox" name="checkbox" value="value">Moodiness</label>
+    <br>
+    <label><input type="checkbox" name="checkbox" value="value">Fatigue</label>
+    <br>
+    <label><input type="checkbox" name="checkbox" value="value">Irritability</label>
+    <br>
+    <label><input type="checkbox" name="checkbox" value="value">Depressed Mood</label>
+    <br>
+    <label><input type="checkbox" name="checkbox" value="value">Difficulty learning new concepts</label>
+    <br>
+    <label><input type="checkbox" name="checkbox" value="value">Forgetfulness</label>
+    <br>
+    <label><input type="checkbox" name="checkbox" value="value">Inability to concentrate</label>
+    <br>
+    <label><input type="checkbox" name="checkbox" value="value">Clumsiness</label>
+    <br>
+    <label><input type="checkbox" name="checkbox" value="value">Increased appetite and carbohydrate cravings</label>
+    <br>
+    <label><input type="checkbox" name="checkbox" value="value">Reduced sex drive</label>
 
     <div class="syncButton"></div>
     <div class="checkList"></div>
