--- a/myRestful.html
+++ b/myRestful.html
@@ -72,6 +72,7 @@
     <div class="submitButton">Submit</div>
     <div class="logInButton"></div>
 
+    <img src="Sleep_History_(Week).png"></img> 
 
   </body>
 
