--- a/myRestfulOriginalScreen.html
+++ b/myRestfulOriginalScreen.html
@@ -20,7 +20,7 @@
     <div class="login-container">
       <form action="/action_page.php">
 
-        <a href="file:///C:/Users/julie/OneDrive/Documents/Elle%20Hacks%202019%20Project/myRestful.html">Logout</a>
+        <a href="file:///C:/Users/Owner/Documents/ElleHacks/My_Restful/myRestful.html">Logout</a>
       </form>
     </div>
   </div>
@@ -28,21 +28,24 @@
     <div class="row">
       <div class="side">
         <h2>Importance of Sleep</h2>
-        <img src="crescent.gif" border="0px" alt="moon"
-         style="width:150px;height:150px;"/>
-        <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-
+        <img class="night-sky" src="Night-sky.jpg" alt="night"/>
+         <p style = "font-size: 18px;">During sleep, the brain has a chance to re-energize and to clear any waste
+         in it. This in turn improves memory and learning skills. In addition,
+         sleep generates parts of the brain so that it can function normally.</p>
       </div>
+
       <div class="main">
         <h2 style="color:white;">Your Sleep History</h2>
-        <div class="fakeimg" style="height:150px;">Image</div>
-        <p> Log in to see your sleep history and points </p>
-        <br>
-        <p> Not already a member? Join now to earn points just by sleeping! </p>
+        <img class="graph" src="Sleep_History_(Week).png"></img>
+        <div class="syncButton">Sync</div>
+        <p style="color:white; margin-bottom:3px;">
+          Oh no! You only got two hours of sleep this Thursday! And you also overslept on the weekends. Repeating this kind of pattern could ruin your health!</p>
+        <p style="color:white;">Your current rest points are: <b>128 points</b>
+        </p>
       </div>
     </div>
 
-    <h2> Symptons of Sleep Deprivation </h2>
+    <h2 style="margin-bottom: 10px;"> Symptons of Sleep Deprivation </h2>
     <p>Check off those that apply to you.</p>
     <label><input type="checkbox" name="checkbox" value="value">Yawning</label>
     <br>
@@ -66,7 +69,7 @@
     <br>
     <label><input type="checkbox" name="checkbox" value="value">Reduced sex drive</label>
 
-    <div class="syncButton"></div>
+    <div class="submitButton">Submit</div>
     <div class="checkList"></div>
     <div class="graph"></div>
     <div class="signUpButton"></div>
