--- a/myRestful.html
+++ b/myRestful.html
@@ -11,16 +11,16 @@
          style="width:170px; height:150px;"/>
     <p>A small step towards a healthy life.</p>
   </div>
-  
+
   <div class="topnav">
-    <a class="active" href="my_restful.html">Home</a>
+    <a class="active" href="file:///C:/Users/Owner/Documents/ElleHacks/My_Restful/myRestful.html">Home</a>
     <a href="https://google.ca">About myRestful</a>
     <a href="#contact">Contact Information</a>
     <div class="login-container">
       <form action="/action_page.php">
         <input type="text" placeholder="Username" name="username">
         <input type="text" placeholder="Password" name="psw">
-        <a href="file:///C:/Users/julie/OneDrive/Documents/Elle%20Hacks%202019%20Project/myRestfulOriginalScreen.html">Login</a>
+        <a href="file:///C:/Users/Owner/Documents/ElleHacks/My_Restful/myRestfulOriginalScreen.html">Login</a>
       </form>
     </div>
   </div>
@@ -28,17 +28,19 @@
     <div class="row">
       <div class="side">
         <h2>Importance of Sleep</h2>
-        <img src="crescent.gif" border="0px" alt="moon"
-         style="width:150px;height:150px;"/>
-        <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-
+        <img class="night-sky" src="Night-sky.jpg" alt="night"/>
+         <p style = "font-size: 18px;">During sleep, the brain has a chance to re-energize and to clear any waste
+         in it. This in turn improves memory and learning skills. In addition,
+         sleep generates parts of the brain so that it can function normally.</p>
       </div>
+
       <div class="main">
         <h2 style="color:white;">Your Sleep History</h2>
-        <div class="fakeimg" style="height:150px;">Image</div>
-        <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-        <br>
-        <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+
+        <p style="color:white; bottom-margin: 8px;">To access this feature, please log in!</p>
+        <p style="color:white;">A chance to get a proper look at your
+        sleeping habits, as well as earning points without having to do anything
+      except sleep!</p>
       </div>
     </div>
 
@@ -65,14 +67,15 @@
     <label><input type="checkbox" name="checkbox" value="value">Increased appetite and carbohydrate cravings</label>
     <br>
     <label><input type="checkbox" name="checkbox" value="value">Reduced sex drive</label>
-
-    <div class="syncButton">Sync</div>
+<div class="row">
+    
     <div class="checkList"></div>
+  </div>
     <div class="graph"></div>
     <div class="submitButton">Submit</div>
     <div class="logInButton"></div>
 
-    <img src="Sleep_History_(Week).png"></img> 
+
 
   </body>
 
