--- a/myRestful.html
+++ b/myRestful.html
@@ -13,14 +13,14 @@
   </div>
 
   <div class="topnav">
-    <a class="active" href="file:///C:/Users/Owner/Documents/ElleHacks/My_Restful/myRestful.html">Home</a>
+    <a class="active" href="https://kiminno.github.io/myRestful">Home</a>
     <a href="https://google.ca">About myRestful</a>
     <a href="#contact">Contact Information</a>
     <div class="login-container">
       <form action="/action_page.php">
         <input type="text" placeholder="Username" name="username">
         <input type="text" placeholder="Password" name="psw">
-        <a href="file:///C:/Users/Owner/Documents/ElleHacks/My_Restful/myRestfulOriginalScreen.html">Login</a>
+        <a href="https://kiminno.github.io/myRestfulOriginalScreen">Login</a>
       </form>
     </div>
   </div>
@@ -68,7 +68,7 @@
     <br>
     <label><input type="checkbox" name="checkbox" value="value">Reduced sex drive</label>
 <div class="row">
-    
+
     <div class="checkList"></div>
   </div>
     <div class="graph"></div>
@@ -80,3 +80,4 @@
   </body>
 
 </html>
+
