--- a/myRestfulOriginalScreen.html
+++ b/myRestfulOriginalScreen.html
@@ -20,7 +20,7 @@
     <div class="login-container">
       <form action="/action_page.php">
 
-        <a href="https://kiminno.github.io/myRestful">Logout</a>
+        <a href="https://kiminno.github.io/myRestfulOriginalScreen">Logout</a>
       </form>
     </div>
   </div>
